fix clipping and make header work and theme buttons

--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 * {
     transition: color 0.2s ease-in-out,
         background-color 0.2s ease-in-out,
-        border-color 0.2s ease-in-out;
+        border-color 0.2s ease-in-out,
+        stroke 0.2s ease-in-out,
+        fill 0.2s ease-in-out;
 
     box-sizing: border-box;
     margin: 0;
@@ -24,6 +26,7 @@
     --width: 80dvw;
 
     font-family: "JetBrains Mono", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    scroll-behavior: smooth;
 }
 
 
@@ -56,6 +59,10 @@ img {
     object-fit: scale-down;
 }
 
+svg {
+    fill: var(--fg);
+}
+
 body {
     background-color: var(--bg);
     color: var(--fg);
@@ -63,6 +70,17 @@ body {
     margin: auto;
     display: flex;
     flex-direction: column;
+}
+
+.grow {
+    flex-grow: 1;
+}
+
+.center {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1ch;
 }
 
 .detail {
@@ -99,16 +117,61 @@ header {
     align-items: center;
     justify-content: center;
     gap: 1ch;
+    width: var(--width);
 }
 
 site-header {
-    margin: 2em auto;
+    position: sticky;
+    top: 0;
+    background-color: rgba(from var(--bg) r g b / 0.85);
+    padding-top: 2em;
+    padding-bottom: 2em;
 
-    a {
+    display: flex;
+    justify-content: center;
+
+    a,
+    .link {
         color: var(--fg);
+        cursor: pointer;
 
         &:hover {
             color: var(--accent);
+            text-decoration: underline;
+
+            svg {
+                fill: var(--accent);
+            }
+        }
+    }
+
+    &:has(#theme_dark:checked) {
+        #dark {
+            cursor: default;
+
+            svg {
+                fill: var(--accent);
+            }
+        }
+    }
+
+    &:has(#theme_system:checked) {
+        #system {
+            cursor: default;
+
+            svg {
+                fill: var(--accent);
+            }
+        }
+    }
+
+    &:has(#theme_light:checked) {
+        #light {
+            cursor: default;
+
+            svg {
+                fill: var(--accent);
+            }
         }
     }
 }
@@ -116,20 +179,24 @@ site-header {
 #hero {
     display: flex;
     flex-direction: column;
-    height: 75dvh;
+    height: 80dvh;
 
-    .spread{
+    .spread {
+        margin: 2em 0;
         flex-grow: 1;
         display: grid;
         align-items: end;
+        overflow: hidden;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        > picture{
+
+        >img {
             grid-column: 4 / 1;
             grid-row: 4 / 1;
             object-fit: cover;
         }
-        #heroButtons{
+
+        #heroButtons {
             width: fit-content;
             height: fit-content;
             /* padding: 1em 2ch;
@@ -171,7 +238,8 @@ site-header {
         color: var(--light);
         border-color: rgba(255, 255, 255, 0);
     }
+
     &[active]:hover {
-        background-color: color-mix(in srgb, var(--accent), var(--dark) 25%);;
+        background-color: color-mix(in srgb, var(--accent), var(--dark) 25%);
     }
 }
